--- a/.github/workflows/on-tag.yml
+++ b/.github/workflows/on-tag.yml
@@ -1,12 +1,11 @@
 name: Docker build on tag
 env:
         DOCKER_CLI_EXPERIMENTAL: enabled
+        TAG_FMT: '^refs/tags/(((.?[0-9]+){3,4}))$'
 
 on:
         push:
-                tags:
-                  - v[0-9]+.[0-9]+.[0-9]+
-                  - v[0-9]+.[0-9]+.[0-9]+-*
+                tags: [ '*' ]
 
 jobs:
         build:
