--- a/.github/workflows/on-push.yml
+++ b/.github/workflows/on-push.yml
@@ -47,7 +47,7 @@ jobs:
                                   --cache-from "type=local,src=/tmp/.buildx-cache" \
                                   --cache-to "type=local,dest=/tmp/.buildx-cache" \
                                   --platform linux/amd64,linux/arm64,linux/arm/v7 \
-                                  --tag ${{ secrets.DOCKER_HUB_USER }}/neutrino-switcher:$BRANCH \
+                                  --tag ${{ secrets.DOCKER_HUB_USER }}/neutrino-switcher:branch-$BRANCH \
                                   --output "type=registry" .
 
                         - name: build neutrino-switcher against latest (neutrino-switcher)
