--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -11,5 +11,5 @@ build:
     stage: build
     script:
         - docker buildx create --use
-        - docker buildx build --platform linux/arm/v7,linux/arm64/v8,linux/amd64 --tag nolim1t/lnd-unlock:gl-$DOCKER_ENV_CI_COMMIT_REF_SLUG . 
+        - docker buildx build --platform linux/arm64/v8,linux/amd64 --tag nolim1t/lnd-unlock:gl-$DOCKER_ENV_CI_COMMIT_REF_SLUG . 
 
