--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -10,6 +10,7 @@ services:
 build:
     stage: build
     script:
+        - docker login registry.gitlab.com
         - docker buildx create --use
         - docker buildx build --platform linux/arm64/v8,linux/amd64 --tag nolim1t/lnd-unlock:gl-$DOCKER_ENV_CI_COMMIT_REF_SLUG . 
 
