--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -8,7 +8,7 @@ services:
     - docker:dind
 
 before_script:
-    - sudo apt-get install -y qemu-user-static
+    - apt-get install -y qemu-user-static
     - docker login -u $CI_REGISTRY_USER -p $CI_REGISTRY_PASSWORD $CI_REGISTRY
     - docker buildx create --use
 
