Add intermediate steps

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,4 +1,4 @@
-image: jdrouet/docker-with-buildx:stable
+image: debian:buster-slim
 
 variables:
     DOCKER_HOST: tcp://docker:2375/
@@ -8,7 +8,10 @@ services:
     - docker:dind
 
 before_script:
-    - apt install -y qemu-user-static
+    - apt install -y docker qemu-user-static
+    - curl -L --output /docker-buildx "https://github.com/docker/buildx/releases/download/v0.3.1/buildx-v0.3.1.linux-amd64"
+    - chmod a+x /docker-buildx
+    - cp /docker-buildx /usr/lib/docker/cli-plugins/docker-buildx
     - docker login -u $CI_REGISTRY_USER -p $CI_REGISTRY_PASSWORD $CI_REGISTRY
     - docker buildx create --use
 
