--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -11,6 +11,7 @@ before_script:
     - apt update && apt install -y docker.io curl qemu-user-static
     - "echo '{\"experimental\": true}' | tee -a /etc/docker/daemon.json"
     - systemctl restart docker
+    - sleep 20
     - docker login -u $CI_REGISTRY_USER -p $CI_REGISTRY_PASSWORD $CI_REGISTRY
     - docker buildx create --use
 
